--- a/layout/css/frontend.css
+++ b/layout/css/frontend.css
@@ -55,8 +55,11 @@ h1 {
   color: #b6b4b4;
   cursor: pointer;
 }
-.login-page h1 span.selected{
-  color: #181616;
+.login-page [data-class="login"].selected{
+  color: #0984e3;
+}
+.login-page [data-class="signup"].selected{
+  color: #00b894;
 }
 .login-page .signup{
   display: none;
