--- a/admin/layout/css/backend.css
+++ b/admin/layout/css/backend.css
@@ -217,6 +217,14 @@ h1{
 }
 .main-table .btn{
     padding: 6px 12px;
+    margin-right: 7px;
+}
+.main-table .text-wrap{
+    max-width: 250px;
+    width: 250px;
+}
+.main-table .control{
+    width: 270px;
 }
 /* End Members  */
 /* Start Categories  */
