--- a/layout/css/frontend.css
+++ b/layout/css/frontend.css
@@ -51,6 +51,13 @@ h1 {
   width: 35px;
   margin-right: 10px;
 }
+.unactive{
+  padding: 5px;
+  background-color: yellow;
+  border-radius: 3px;
+  font-weight: bold;
+  cursor: pointer;
+}
 /* End Golobal Rules */
 
 /* Start navbar Edit  */
@@ -115,6 +122,11 @@ h1 {
   line-height: 1.6;
   height: 44px;
   max-height: 44px;
+}
+.small{
+  font-weight: bold;
+  font-size: 14px;
+  color: #777;
 }
 /* End Category Styling */
 /* Start Profile Styling */
