--- a/admin/layout/css/backend.css
+++ b/admin/layout/css/backend.css
@@ -292,5 +292,28 @@ h1{
 .categories .add-category{
     margin-bottom: 30px;
 }
-
+.cat-head{
+    color: #0984e3;
+    font-weight: bold;
+}
+.child-cat {
+    margin: 20px 0;
+    padding: 0;
+}
+.child-cat  li{
+    margin-left: 10px;
+    font-weight: bold;
+    font-size: 1.9rem;
+    list-style: none;
+    display: flex;
+    justify-content: space-between;
+    padding: 10px;
+    height: 50px;
+}
+.child-cat  li:nth-child(even){
+    background-color: #cbdbe6;
+}
+.child-cat .buttons{
+    display: none;
+}
 /* End Categories  */
