Added Tags To New Items & Cleanup

--- a/admin/layout/css/backend.css
+++ b/admin/layout/css/backend.css
@@ -317,3 +317,10 @@ h1{
     display: none;
 }
 /* End Categories  */
+/* Start Items  */
+.tags{
+    display: none;
+    visibility: none;
+    cursor: none;
+}
+/* Start Items  */
